--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "firstname",
         "glossarium",
         "lastname",
+        "Looschelders",
         "luma",
         "pagebreak",
         "Typst",
