--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "codefigure",
         "codefigurefile",
+        "Delikstrechts",
         "emph",
         "firstname",
         "glossarium",
