correction of Deliktsrecht in dic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "cSpell.words": [
         "codefigure",
         "codefigurefile",
-        "Delikstrechts",
+        "Deliktsrecht",
         "emph",
         "firstname",
         "glossarium",
