added Immaterialgüterrechte to dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "emph",
         "firstname",
         "glossarium",
+        "Immaterialgüterrechte",
         "lastname",
         "Looschelders",
         "luma",
