added Mitgliedschaftsrechte to dic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "lastname",
         "Looschelders",
         "luma",
+        "Mitgliedschaftsrechte",
         "pagebreak",
         "Typst",
         "weakbreak"
