added Haftungsbegründender to dic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "emph",
         "firstname",
         "glossarium",
+        "Haftungsbegründender",
         "Immaterialgüterrechte",
         "lastname",
         "Looschelders",
