Garantenstellung and Haftungsbegründende added to dic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
         "Deliktsrecht",
         "emph",
         "firstname",
+        "Garantenstellung",
         "glossarium",
+        "Haftungsbegründende",
         "Haftungsbegründender",
         "Immaterialgüterrechte",
         "lastname",
