--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
         "firstname",
         "Garantenstellung",
         "glossarium",
-        "Haftungsbegründende",
+        "haftungsbegründende",
         "Haftungsbegründender",
         "Immaterialgüterrechte",
         "lastname",
