added new words to dic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "Adäquanztheorie",
         "codefigure",
         "codefigurefile",
+        "conditio",
         "Deliktsrecht",
         "emph",
         "firstname",
@@ -16,6 +18,8 @@
         "Mitgliedschaftsrechte",
         "pagebreak",
         "Typst",
-        "weakbreak"
+        "Verschuldensebene",
+        "weakbreak",
+        "Zurechnungskriterien"
     ]
 }
