new words to dic and added Medicus - Bürgerliches Recht to bib

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "Adäquanztheorie",
+        "Brox",
         "codefigure",
         "codefigurefile",
         "conditio",
@@ -11,10 +12,12 @@
         "glossarium",
         "haftungsbegründende",
         "Haftungsbegründender",
+        "hayagriva",
         "Immaterialgüterrechte",
         "lastname",
         "Looschelders",
         "luma",
+        "Medicus",
         "Mitgliedschaftsrechte",
         "pagebreak",
         "Typst",
