added content of chapter rechtswidrigkeit and beginning of Verantwortlichkeit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Garantenstellung",
         "glossarium",
         "haftungsbegründende",
+        "haftungsbegründenden",
         "Haftungsbegründender",
         "hayagriva",
         "Immaterialgüterrechte",
@@ -21,6 +22,7 @@
         "Mitgliedschaftsrechte",
         "pagebreak",
         "Typst",
+        "Umgrenzung",
         "Verschuldensebene",
         "weakbreak",
         "Zurechnungskriterien"
