new word to dic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "Typst",
         "Umgrenzung",
         "Verschuldensebene",
+        "Verschuldensfähigkeit",
         "weakbreak",
         "Zurechnungskriterien"
     ]
