last commit before second proof reading; small fixes and addition of Einleitung and Fazit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "pagebreak",
         "Typst",
         "Umgrenzung",
+        "vermögensbezogener",
         "Verschuldensebene",
         "Verschuldensfähigkeit",
         "weakbreak",
